# nRF5-SDK-for-Mesh-scg

./: README.md
CMake/: Board.cmake
CMake/board/: c2_7001.cmake  dds238_2.cmake  e104_bt5032u.cmake  light_rgbw_1.cmake  light_rgbwc_1.cmake  screen_ctrl.cmake  sock_wk_y.cmake  sock_wwk_dey.cmake  sw_ws_euy_1.cmake  sw_ws_euy_2.cmake  sw_ws_euy_3.cmake  th01.cmake  thermostat_brt100.cmake  thermostat_k5h.cmake
CMake/toolchain/: gccarmemb.cmake
examples/: CMakeLists.txt  smarthome
examples/common/: CMakeLists.txt
examples/common/include/: app_battery.h  app_light_hsl.h  app_onoff_client.c  app_onoff_client.h  app_ponoff.h  app_sensor.h  app_sensor_utils.h  app_time_client.h  mesh_provisionee_no_oob.h  mesh_provisionee_output_blink.h  mesh_provisionee_output_numeric.h
examples/common/src/: app_battery.c  app_light_hsl.c  app_onoff_client.c  app_ponoff.c  app_sensor.c  app_sensor_utils.c  app_time_client.c  mesh_provisionee_no_oob.c  mesh_provisionee_output_blink.c  mesh_provisionee_output_numeric.c  simple_hal.c
examples/mesh_controller/: CMakeLists.txt  README.md
examples/mesh_controller/include/: app_config.h  ctrl_led.h  e104_bt5032u_config.h  nrf_mesh_config_app.h  serial.h  serial_cmd_handler.h  serial_packet.h  serial_uart.h
examples/mesh_controller/src/: ad_data_proxy.c  ctrl_led.c  main.c  serial.c  serial_bearer.c  serial_cmd_handler.c  serial_uart.c
examples/mesh_controller_usb/: CMakeLists.txt
examples/mesh_controller_usb/include/: ad_data_proxy.h  app_config.h  c2_7001_config.h  ctrl_led.h  nrf5_sdk_log.h  serial.h  serial_bearer.h  serial_types.h  serial_uart.h
examples/mesh_controller_usb/src/: ad_data_proxy.c  ctrl_led.c  main.c  serial.c  serial_bearer.c  serial_cmd_handler.c  serial_uart.c
mesh/prov/src/: prov_utils.c
models/model_spec/: CMakeLists.txt
models/model_spec/common/include/: model_common.h  model_config_file.h
models/model_spec/common/src/: model_config_file.c
models/model_spec/generic_battery/: CMakeLists.txt
models/model_spec/generic_battery/include/: generic_battery_common.h  generic_battery_messages.h  generic_battery_server.h
models/model_spec/generic_battery/src/: generic_battery_server.c
models/model_spec/generic_level/src/: generic_level_mc.c
models/model_spec/generic_onoff/src/: generic_onoff_mc.c
models/model_spec/generic_ponoff/: CMakeLists.txt
models/model_spec/generic_ponoff/include/: generic_ponoff_mc.h
models/model_spec/generic_ponoff/src/: generic_ponoff_mc.c
models/model_spec/light_ctl/src/: light_ctl_mc.c
models/model_spec/light_hsl/: CMakeLists.txt
models/model_spec/light_hsl/include/: light_hsl_common.h  light_hsl_mc.h  light_hsl_messages.h  light_hsl_setup_server.h  light_hsl_utils.h
models/model_spec/light_hsl/src/: light_hsl_mc.c  light_hsl_setup_server.c
models/model_spec/light_lc/src/: light_lc_mc.c
models/model_spec/light_lightness/src/: light_lightness_mc.c
models/model_spec/scene/src/: scene_mc.c
models/model_spec/sensor/: CMakeLists.txt
models/model_spec/sensor/include/: sensor_common.h  sensor_mc.h  sensor_setup_server.h  sensor_utils.h
models/model_spec/sensor/src/: sensor_mc.c
models/model_spec/time/: CMakeLists.txt
models/model_spec/time/include/: time_client.h  time_common.h  time_messages.h
models/model_spec/time/src/: time_client.c
